--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="#p3"></a></li>
         <li><a href="#p4"></a></li>
         <li><a href="#p5"></a></li>
-        <li><a href="#p6"></a></li>
+        <!-- <li><a href="#p6"></a></li> -->
       </ul>
     </div>
     <header>
@@ -52,11 +52,12 @@
           <hr>
         </div>
         <div class="photo_right">
-          <div class="portfolio_photo">
-            <a href=" https://jyj147.github.io/project_1/">
+          <a href=" https://jyj147.github.io/project_1/" target="_blank">
+            <div class="portfolio_photo">
               <img src="img/bake.jpeg" altstyle="margin-top: 0px;">
-            </a>
-          </div>
+            </div>
+          </a>
+        </div>
       </article>
       <!-- 02 PF-->
       <article class="page p05 section" id="p2">
@@ -64,41 +65,44 @@
           <hr>
         </div>
         <div class="photo_right">
-          <div class="portfolio_photo">
-            <a href=" https://jyj147.github.io/project_2/">
+          <a href=" https://jyj147.github.io/project_2/" target="_blank">
+            <div class="portfolio_photo">
               <img src="img/Subway.jpeg" altstyle="margin-top: 0px;">
-            </a>
-          </div>
+            </div>
+          </a>
+        </div>
       </article>
       <!-- 03 PF-->
       <article class="page p05 section" id="p3">
         <div class="portfolio_text3 text_left">
+          <hr>
         </div>
         <div class="photo_right">
+          <a href="https://jyj147.github.io/project_3/" target="_blank">
           <div class="portfolio_photo">
-            <a href="https://jyj147.github.io/project_3/">
               <img src="img/Bookstore.jpeg" altstyle="margin-top: 0px;">
-            </a>
           </div>
+        </a>
+      </div>
       </article>
       <!-- 04 PF-->
       <article class="page p05 section" id="p4">
         <div class="portfolio_text4 text_left">
+          <hr>
         </div>
         <div class="photo_right">
+          <a href="https://jyj147.github.io/project4/" target="_blank">
           <div class="portfolio_photo">
-            <a href="https://jyj147.github.io/project4/">
               <img src="img/illy.jpeg" altstyle="margin-top: 0px;">
-            </a>
           </div>
+        </a>
+        </div>
       </article>
       <!-- 05 PF-->
       <article class="page p03 section" id="p5">
       </article>
-      <!--마지막 페이지 모음-->
+      <!-- 마지막 페이지 모음 -->
 
-    </section>
-  </div><!--//wrap-->
 
   <script src="./portfolio.js"></script>
 
