--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="container">
           <canvas class="illo"></canvas>
         </div>
-        <h1><span class='one'>Jang Yu Jeong</span>
+        <h1 class="NAME"><span class='one'>Jang Yu Jeong</span>
           <p class="PO">Portfolio</p>
         </h1>
         <div class="HA"> HTML / CSS / JavaScript / J-QUERY / JSON / AJAX</div>
@@ -50,6 +50,7 @@
       <article class="page p05 section" id="p1">
         <div class="portfolio_text text_left">
           <hr>
+          <div class="PF">01</div>
         </div>
         <div class="photo_right">
           <a href=" https://jyj147.github.io/project_1/" target="_blank">
@@ -63,6 +64,7 @@
       <article class="page p05 section" id="p2">
         <div class="portfolio_text2 text_left">
           <hr>
+          <div class="PF">02</div>
         </div>
         <div class="photo_right">
           <a href=" https://jyj147.github.io/project_2/" target="_blank">
@@ -76,6 +78,7 @@
       <article class="page p05 section" id="p3">
         <div class="portfolio_text3 text_left">
           <hr>
+          <div class="PF">03</div>
         </div>
         <div class="photo_right">
           <a href="https://jyj147.github.io/project_3/" target="_blank">
@@ -89,6 +92,7 @@
       <article class="page p05 section" id="p4">
         <div class="portfolio_text4 text_left">
           <hr>
+          <div class="PF">04</div>
         </div>
         <div class="photo_right">
           <a href="https://jyj147.github.io/project4/" target="_blank">
