--- a/index.html
+++ b/index.html
@@ -50,8 +50,14 @@
       <article class="page p05 section" id="p1">
         <div class="portfolio_text text_left">
           <hr>
+          
           <div class="PF">01</div>
+          <div id="PFF">
+          <h3>베이커리 몰</h3>
+          <h2>Yj Bakery</h2>
+          <h3>color <br/> <span></span> <span></span> <span></span></h3>
         </div>
+      </div>
         <div class="photo_right">
           <a href=" https://jyj147.github.io/project_1/" target="_blank">
             <div class="portfolio_photo">
@@ -65,7 +71,12 @@
         <div class="portfolio_text2 text_left">
           <hr>
           <div class="PF">02</div>
+          <div id="PFF">
+            <h3>베이커리 몰</h3>
+            <h2>Yj Bakery</h2>
+            <h3>color <br/> <span></span> <span></span> <span></span></h3>
         </div>
+      </div>
         <div class="photo_right">
           <a href=" https://jyj147.github.io/project_2/" target="_blank">
             <div class="portfolio_photo">
@@ -79,6 +90,11 @@
         <div class="portfolio_text3 text_left">
           <hr>
           <div class="PF">03</div>
+          <div id="PFF">
+            <h3>베이커리 몰</h3>
+            <h2>Yj Bakery</h2>
+            <h3>color <br/> <span></span> <span></span> <span></span></h3>
+        </div>
         </div>
         <div class="photo_right">
           <a href="https://jyj147.github.io/project_3/" target="_blank">
@@ -93,6 +109,11 @@
         <div class="portfolio_text4 text_left">
           <hr>
           <div class="PF">04</div>
+          <div id="PFF">
+            <h3>베이커리 몰</h3>
+            <h2>Yj Bakery</h2>
+            <h3>color <br/> <span></span> <span></span> <span></span></h3>
+        </div>
         </div>
         <div class="photo_right">
           <a href="https://jyj147.github.io/project4/" target="_blank">
