--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
           <hr>
           <div class="PF">02</div>
           <div id="PFF">
-            <h3>베이커리 몰</h3>
-            <h2>Yj Bakery</h2>
+            <h3>서브웨이</h3>
+            <h2>SUBWAY</h2>
             <h3>color <br/> <span></span> <span></span> <span></span></h3>
         </div>
       </div>
@@ -91,8 +91,8 @@
           <hr>
           <div class="PF">03</div>
           <div id="PFF">
-            <h3>베이커리 몰</h3>
-            <h2>Yj Bakery</h2>
+            <h3>온라인 서점</h3>
+            <h2>Booklovers</h2>
             <h3>color <br/> <span></span> <span></span> <span></span></h3>
         </div>
         </div>
@@ -110,8 +110,8 @@
           <hr>
           <div class="PF">04</div>
           <div id="PFF">
-            <h3>베이커리 몰</h3>
-            <h2>Yj Bakery</h2>
+            <h3>일리 커피</h3>
+            <h2>illy cafe</h2>
             <h3>color <br/> <span></span> <span></span> <span></span></h3>
         </div>
         </div>
