--- a/index.html
+++ b/index.html
@@ -50,14 +50,17 @@
       <article class="page p05 section" id="p1">
         <div class="portfolio_text text_left">
           <hr>
-          
+
           <div class="PF">01</div>
           <div id="PFF">
-          <h3>베이커리 몰</h3>
-          <h2>Yj Bakery</h2>
-          <h3>color <br/> <span></span> <span></span> <span></span></h3>
+            <h3>베이커리 몰</h3>
+            <h2>Yj Bakery</h2>
+            <h3>color </h3> <br />
+            <div class="color">
+              <span></span> <span></span> <span></span>
+            </div>
+          </div>
         </div>
-      </div>
         <div class="photo_right">
           <a href=" https://jyj147.github.io/project_1/" target="_blank">
             <div class="portfolio_photo">
@@ -74,9 +77,12 @@
           <div id="PFF">
             <h3>서브웨이</h3>
             <h2>SUBWAY</h2>
-            <h3>color <br/> <span></span> <span></span> <span></span></h3>
+            <h3>color</h3> <br />
+            <div class="color">
+              <span></span> <span></span> <span></span>
+            </div>
+          </div>
         </div>
-      </div>
         <div class="photo_right">
           <a href=" https://jyj147.github.io/project_2/" target="_blank">
             <div class="portfolio_photo">
@@ -93,16 +99,19 @@
           <div id="PFF">
             <h3>온라인 서점</h3>
             <h2>Booklovers</h2>
-            <h3>color <br/> <span></span> <span></span> <span></span></h3>
-        </div>
+            <h3>color</h3><br />
+            <div class="color">
+              <span></span> <span></span> <span></span>
+            </div>
+          </div>
         </div>
         <div class="photo_right">
           <a href="https://jyj147.github.io/project_3/" target="_blank">
-          <div class="portfolio_photo">
+            <div class="portfolio_photo">
               <img src="img/Bookstore.jpeg" altstyle="margin-top: 0px;">
-          </div>
-        </a>
-      </div>
+            </div>
+          </a>
+        </div>
       </article>
       <!-- 04 PF-->
       <article class="page p05 section" id="p4">
@@ -112,15 +121,18 @@
           <div id="PFF">
             <h3>일리 커피</h3>
             <h2>illy cafe</h2>
-            <h3>color <br/> <span></span> <span></span> <span></span></h3>
-        </div>
+            <h3>color</h3> <br />
+            <div class="color">
+              <span></span> <span></span> <span></span>
+            </div>
+          </div>
         </div>
         <div class="photo_right">
           <a href="https://jyj147.github.io/project4/" target="_blank">
-          <div class="portfolio_photo">
+            <div class="portfolio_photo">
               <img src="img/illy.jpeg" altstyle="margin-top: 0px;">
-          </div>
-        </a>
+            </div>
+          </a>
         </div>
       </article>
       <!-- 05 PF-->
@@ -129,7 +141,7 @@
       <!-- 마지막 페이지 모음 -->
 
 
-  <script src="./portfolio.js"></script>
+      <script src="./portfolio.js"></script>
 
 </body>
 
