--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
             <h3>color </h3> <br />
             <div class="color">
               <span></span> <span></span> <span></span>
-            </div>
+            </div> <br><br><br>
+
+            <p>글루텐 프리 전문 베이커리를 판매하는</p> 
+            <p>YJ Bakery 웹 사이트입니다.</p> <br>
+            <p>처음 만든 웹사이트이며 연습 하기 위해,</p>
+            <p>레이아웃과 이미지를 비슷하게 따라했습니다.</p>
+
           </div>
         </div>
         <div class="photo_right">
@@ -80,7 +86,18 @@
             <h3>color</h3> <br />
             <div class="color">
               <span></span> <span></span> <span></span>
-            </div>
+            </div><br><br><br>
+
+            <p>샌드위치 전문 브랜드</p>
+            <p> 서브웨이 웹페이지입니다.</p>
+             <br>
+            <p>서브웨이의 대표 색인 초록색과</p> 
+            <p>노란색을 사용하여 포인트를 주어 제작했습니다.</p><br>
+            <p>제이쿼리를 사용하여</p>
+            <p>  메뉴바에 반응형을 적용,</p> <br>
+            <p>슬라이더와 영상을 넣어 </p>
+            <p>지루하지 않게 제작했습니다.</p>
+
           </div>
         </div>
         <div class="photo_right">
@@ -102,7 +119,13 @@
             <h3>color</h3><br />
             <div class="color">
               <span></span> <span></span> <span></span>
-            </div>
+            </div><br><br><br>
+
+            <p>글루텐 프리 전문 베이커리를 판매하는</p> 
+            <p>YJ Bakery 웹 사이트입니다.</p> <br>
+            <p>처음 만든 웹사이트이며 연습 하기 위해,</p>
+            <p>레이아웃과 이미지를 비슷하게 따라했습니다.</p>
+
           </div>
         </div>
         <div class="photo_right">
@@ -124,7 +147,13 @@
             <h3>color</h3> <br />
             <div class="color">
               <span></span> <span></span> <span></span>
-            </div>
+            </div><br><br><br>
+
+            <p>글루텐 프리 전문 베이커리를 판매하는</p> 
+            <p>YJ Bakery 웹 사이트입니다.</p> <br>
+            <p>처음 만든 웹사이트이며 연습 하기 위해,</p>
+            <p>레이아웃과 이미지를 비슷하게 따라했습니다.</p>
+
           </div>
         </div>
         <div class="photo_right">
