--- a/index.html
+++ b/index.html
@@ -121,10 +121,13 @@
               <span></span> <span></span> <span></span>
             </div><br><br><br>
 
-            <p>글루텐 프리 전문 베이커리를 판매하는</p> 
-            <p>YJ Bakery 웹 사이트입니다.</p> <br>
-            <p>처음 만든 웹사이트이며 연습 하기 위해,</p>
-            <p>레이아웃과 이미지를 비슷하게 따라했습니다.</p>
+            <p>카카오 도서 오픈 Api를 사용하여 도서 정보를</p> 
+            <p>불러와 만든 온라인서점 웹페이지 입니다.</p><br>
+            <p>도서 사이트의 분위기에 맞는 흰색 바탕에</p>
+            <p>붉은색의 포인트 컬러를 이용해 차분하고 안정된</p>
+            <p>페이지를 제작하였습니다.</p> <br>
+            <p>J-query와 JAVA Script를 이용하여 동적 효과와</p>
+            <p>편리함을 제공하였습니다.</p>
 
           </div>
         </div>
