--- a/index.html
+++ b/index.html
@@ -152,10 +152,13 @@
               <span></span> <span></span> <span></span>
             </div><br><br><br>
 
-            <p>글루텐 프리 전문 베이커리를 판매하는</p> 
-            <p>YJ Bakery 웹 사이트입니다.</p> <br>
-            <p>처음 만든 웹사이트이며 연습 하기 위해,</p>
-            <p>레이아웃과 이미지를 비슷하게 따라했습니다.</p>
+            <p>커피 원두와 캡슐, 머신 그리고 컵을</p> 
+            <p>살 수 있게 만든 일리커피 웹페이지입니다.</p> <br>
+            <p>일리커피의 대표색인 빨간색과</p>
+            <p>차분한 느낌을 줄 무채색을 사용하여</p>
+            <p>더욱 멋있는 페이지를 제작하였습니다.</p> <br>
+            <p>장바구니에 담고 목록을 보이게 해서</p>
+            <p>더욱 편하게 확인할 수 있도록 만들었습니다.</p>
 
           </div>
         </div>
