--- a/index.html
+++ b/index.html
@@ -59,13 +59,15 @@
               <span></span> <span></span> <span></span>
             </div><br><br><br>
 
-            <p>커피 원두와 캡슐, 머신 그리고 컵을</p> 
+            <p>커피 원두와 캡슐, 머신 그리고 컵을</p>
             <p>살 수 있게 만든 일리커피 웹페이지입니다.</p> <br>
             <p>일리커피의 대표색인 빨간색과</p>
             <p>차분한 느낌을 줄 무채색을 사용하여</p>
             <p>더욱 멋있는 페이지를 제작하였습니다.</p> <br>
             <p>장바구니에 담고 목록을 보이게 해서</p>
             <p>더욱 편하게 확인할 수 있도록 만들었습니다.</p>
+
+            <button>main</button> <button class="BTN">sub</button>
 
           </div>
         </div>
@@ -93,13 +95,15 @@
 
             <p>샌드위치 전문 브랜드</p>
             <p> 서브웨이 웹페이지입니다.</p>
-             <br>
-            <p>서브웨이의 대표 색인 초록색과</p> 
+            <br>
+            <p>서브웨이의 대표 색인 초록색과</p>
             <p>노란색을 사용하여 포인트를 주어 제작했습니다.</p><br>
             <p>제이쿼리를 사용하여</p>
-            <p>  메뉴바에 반응형을 적용,</p> <br>
+            <p> 메뉴바에 반응형을 적용,</p> <br>
             <p>슬라이더와 영상을 넣어 </p>
             <p>지루하지 않게 제작했습니다.</p>
+
+            <button>main</button> <button class="BTN">sub</button>
 
           </div>
         </div>
@@ -124,13 +128,15 @@
               <span></span> <span></span> <span></span>
             </div><br><br><br>
 
-            <p>카카오 도서 오픈 Api를 사용하여 도서 정보를</p> 
+            <p>카카오 도서 오픈 Api를 사용하여 도서 정보를</p>
             <p>불러와 만든 온라인서점 웹페이지 입니다.</p><br>
             <p>도서 사이트의 분위기에 맞는 흰색 바탕에</p>
             <p>붉은색의 포인트 컬러를 이용해 차분하고 안정된</p>
             <p>페이지를 제작하였습니다.</p> <br>
             <p>J-query와 JAVA Script를 이용하여 동적 효과와</p>
             <p>편리함을 제공하였습니다.</p>
+
+            <button>main</button> <button class="BTN">sub</button>
 
           </div>
         </div>
@@ -156,12 +162,12 @@
               <span></span> <span></span> <span></span>
             </div> <br><br><br>
 
-            <p>글루텐 프리 전문 베이커리를 판매하는</p> 
+            <p>글루텐 프리 전문 베이커리를 판매하는</p>
             <p>YJ Bakery 웹 사이트입니다.</p> <br>
             <p>처음 만든 웹사이트이며 연습 하기 위해,</p>
             <p>레이아웃과 이미지를 비슷하게 따라했습니다.</p>
 
-            <div class="button"></div>
+            <button>main</button> <button class="BTN">sub</button>
 
           </div>
         </div>
@@ -177,7 +183,7 @@
       <!-- 05 PF-->
       <article class="page p03 section" id="p5">
       </article>
-      
+
       <!-- 마지막 페이지 모음 -->
 
 
