--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
             <p>글루텐 프리 전문 베이커리를 판매하는</p>
             <p>YJ Bakery 웹 사이트입니다.</p> <br>
-            <p>처음 만든 웹사이트이며 연습 하기 위해,</p>
+            <p>처음 만든 웹사이트이며, 연습 하기 위해</p>
             <p>레이아웃과 이미지를 비슷하게 따라했습니다.</p>
 
             <button>main</button> <button class="BTN">sub</button>
