--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
             <p>일리커피의 대표색인 빨간색과</p>
             <p>차분한 느낌을 줄 무채색을 사용하여</p>
             <p>더욱 멋있는 페이지를 제작하였습니다.</p> <br>
-            <p>장바구니에 담고 목록을 보이게 해서</p>
+            <p>react를 사용, 장바구니에 담고 목록을 보이게 해서</p>
             <p>더욱 편하게 확인할 수 있도록 만들었습니다.</p>
 
-            <button>main</button> <button class="BTN">sub</button>
+         <a href="https://jyj147.github.io/project4/"><button>main</button></a>   
+         <a href="https://jyj147.github.io/project4/detail/0"><button class="BTN">sub</button></a> 
 
           </div>
         </div>
