--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
             </div>
           </a>
         </div>
+        <!-- <div class="mobile mobile_left">
+          <div class="mobile_photo">
+            <a href="https://jyj147.github.io/project4/" onclick="window.open(this.href, '_blank', 'width=480, height=800'); return false;">
+              <img src="img/mobile.png" alt="">
+            </a>
+            <div class="img2">
+              <img src="img/mobile/coco.jpeg" alt="">
+          </div>
+          </div>
+        </div> -->
       </article>
 
       <!-- 02 PF-->
