--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
          <a href="https://jyj147.github.io/project4/detail/0"><button class="BTN">sub</button></a> 
 
           </div>
+
         </div>
         <div class="photo_right">
           <a href="https://jyj147.github.io/project4/" target="_blank">
@@ -78,17 +79,20 @@
               <img src="img/illy.jpeg" altstyle="margin-top: 0px;">
             </div>
           </a>
+
+          <!-- 모바일 -->
+          <div class="mobile mobile_right">
+            <div class="mobile_photo">
+              <a href="https://jyj147.github.io/project4/" onclick="window.open(this.href, '_blank', 'width=480, height=800'); return false;">
+                <img src="img/mobile.png" alt="">
+              </a>
+              <div class="img2">
+                <img src="img/mobile/coco.jpeg" alt="">
+            </div>
+            </div>
+          </div>
         </div>
-        <!-- <div class="mobile mobile_left">
-          <div class="mobile_photo">
-            <a href="https://jyj147.github.io/project4/" onclick="window.open(this.href, '_blank', 'width=480, height=800'); return false;">
-              <img src="img/mobile.png" alt="">
-            </a>
-            <div class="img2">
-              <img src="img/mobile/coco.jpeg" alt="">
-          </div>
-          </div>
-        </div> -->
+        
       </article>
 
       <!-- 02 PF-->
@@ -124,7 +128,18 @@
               <img src="img/Subway.jpeg" altstyle="margin-top: 0px;">
             </div>
           </a>
-        </div>
+             <!-- 모바일 -->
+             <div class="mobile mobile_right">
+              <div class="mobile_photo">
+                <a href="https://jyj147.github.io/project4/" onclick="window.open(this.href, '_blank', 'width=480, height=800'); return false;">
+                  <img src="img/mobile.png" alt="">
+                </a>
+                <div class="img2">
+                  <img src="img/mobile/coco.jpeg" alt="">
+              </div>
+              </div>
+            </div>
+          </div>
       </article>
       <!-- 03 PF-->
       <article class="page p05 section" id="p3">
@@ -157,7 +172,18 @@
               <img src="img/Bookstore.jpeg" altstyle="margin-top: 0px;">
             </div>
           </a>
-        </div>
+             <!-- 모바일 -->
+             <div class="mobile mobile_right">
+              <div class="mobile_photo">
+                <a href="https://jyj147.github.io/project4/" onclick="window.open(this.href, '_blank', 'width=480, height=800'); return false;">
+                  <img src="img/mobile.png" alt="">
+                </a>
+                <div class="img2">
+                  <img src="img/mobile/coco.jpeg" alt="">
+              </div>
+              </div>
+            </div>
+          </div>
       </article>
       <!-- 04 PF-->
       <article class="page p05 section" id="p1">
