--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <img src="img/mobile.png" alt="">
               </a>
               <div class="img2">
-                <img src="img/mobile/coco.jpeg" alt="">
+                <img class="RR" src="img/mobile_illy.jpeg" alt="">
             </div>
             </div>
           </div>
