--- a/index.html
+++ b/index.html
@@ -83,16 +83,18 @@
           <!-- 모바일 -->
           <div class="mobile mobile_right">
             <div class="mobile_photo">
+              <div class="img2">
+                <img src="img/mobile_illy.jpeg" alt="">
+              </div>
               <a href="https://jyj147.github.io/project4/" onclick="window.open(this.href, '_blank', 'width=480, height=800'); return false;">
                 <img src="img/mobile.png" alt="">
               </a>
-              <div class="img2">
-                <img class="RR" src="img/mobile_illy.jpeg" alt="">
-            </div>
-            </div>
-          </div>
-        </div>
-        
+              <!-- <div class="img2">
+                <img src="img/mobile_illy.jpeg" alt="">
+              </div> -->
+              </div>
+              </div>
+              </div>
       </article>
 
       <!-- 02 PF-->
