--- a/index.html
+++ b/index.html
@@ -79,22 +79,24 @@
               <img src="img/illy.jpeg" altstyle="margin-top: 0px;">
             </div>
           </a>
-
+        
           <!-- 모바일 -->
           <div class="mobile mobile_right">
             <div class="mobile_photo">
-              <div class="img2">
-                <img src="img/mobile_illy.jpeg" alt="">
-              </div>
-              <a href="https://jyj147.github.io/project4/" onclick="window.open(this.href, '_blank', 'width=480, height=800'); return false;">
+              <a href="https://jyj147.github.io/project4/"
+                onclick="window.open(this.href, '_blank', 'width=480, height=800'); return false;">
                 <img src="img/mobile.png" alt="">
+                <div class="img2">
+                  <img src="img/mobile_illy.jpeg" alt="">
+                </div>
               </a>
               <!-- <div class="img2">
-                <img src="img/mobile_illy.jpeg" alt="">
-              </div> -->
-              </div>
-              </div>
-              </div>
+                                  <img src="img/mobile_illy.jpeg" alt="">
+                                </div> -->
+            </div>
+            
+          </div>
+        </div>
       </article>
 
       <!-- 02 PF-->
