--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
              <!-- 모바일 -->
              <div class="mobile mobile_right">
               <div class="mobile_photo">
-                <a href="https://jyj147.github.io/project4/" onclick="window.open(this.href, '_blank', 'width=480, height=800'); return false;">
+                <a href="https://jyj147.github.io/project_2/" onclick="window.open(this.href, '_blank', 'width=480, height=800'); return false;">
                   <img src="img/mobile.png" alt="">
                 </a>
                 <div class="img2">
-                  <img src="img/mobile/coco.jpeg" alt="">
+                  <img src="img/Subway.jpeg" alt="">
               </div>
               </div>
             </div>
