--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
       <!-- 05 PF-->
       <article class="page p05 section" id="About_me">
         <div class="About_mebox">
-
+          <div class="title">
+            <h2>ABOUT ME</h2>
+          </div>
         </div>
       </article>
 
