--- a/index.html
+++ b/index.html
@@ -213,6 +213,9 @@
           <div class="title">
             <h2>ABOUT ME</h2>
           </div>
+          <div class="sub_title">
+            <h3>A LEAD WEB PUBLISHER BASED IN KOREA</h3>
+        </div>
         </div>
       </article>
 
