--- a/index.html
+++ b/index.html
@@ -216,6 +216,33 @@
           <div class="sub_title">
             <h3>A LEAD WEB PUBLISHER BASED IN KOREA</h3>
         </div>
+        <div class="main_box">
+          <div class="photo">
+              <img src="img/사진.jpg" alt="">
+          </div>
+          <div class="text">
+              <h2>Jang Yu Jeong</h2>
+              <h4>A Lead Web Publisher based in Korea</h4>
+              <p>모든 규모의 고객들을 위한 서비스를 디자인하고 개발합니다.<br>
+                  멋지고 현대적인 웹사이트, 웹 서비스 그리고 온라인 상점을 만드는 것을 전문으로 하고 있습니다.<br>
+                  저의 목표는 지금보다 더 많은 기술을 습득하고 사용자의 정보를 파악하고 분석 연구하여<br>
+                  다양한 사용자가 웹에 보다 쉽게 접근할수있도록 편의성 높은 웹 사이트를 설계하는 것입니다.</p>
+              <table>
+                  <tr>
+                      <th>Name</th><td>장유정</td><th>Address</th><td>경기도 안산시</td>
+                  </tr>
+                  <tr>
+                      <th>Birthday</th><td>1999.07.16</td><th>Age</th><td>25세</td>
+                  </tr>
+                  <tr>
+                      <th>Education</th><td>장안대학교 식품영양학과</td><th>Phone</th><td>010-3913-5192</td>
+                  </tr>
+                  <tr>
+                      <th>E-mail</th><td>jyj06789@gmail.com</td><th>CAREER</th><td>라인컴퓨터아트학원<br>(22. .  ~ 23. . )</td>
+                  </tr>
+              </table>
+          </div>
+      </div>
         </div>
       </article>
 
