--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script src='https://unpkg.com/zdog@1/dist/zdog.dist.js'></script>
   <script src="./script.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Teko:700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
+  
 
 </head>
 
