--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <script src="./script.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Teko:700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
+
 
 </head>
 
@@ -44,7 +46,7 @@
         <h1 class="NAME"><span class='one'>Jang Yu Jeong</span>
           <p class="PO">Portfolio</p>
         </h1>
-        <div class="HA"> HTML / CSS / JavaScript / J-QUERY / JSON / AJAX</div>
+        <div class="HA"> HTML / CSS / JavaScript / J-QUERY / JSON / AJAX / REACT</div>
       </div>
 
       <!-- 01 PF-->
