--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
             <p>일리커피의 대표색인 빨간색과</p>
             <p>차분한 느낌을 줄 무채색을 사용하여</p>
             <p>더욱 멋있는 페이지를 제작하였습니다.</p> <br>
-            <p>react를 사용, 장바구니에 담고 목록을 보이게 해서</p>
-            <p>더욱 편하게 확인할 수 있도록 만들었습니다.</p>
+            <p>react router, spa를 사용하여 </p>
+            <p>상세페이지, 장바구니, 로그인을 연결했습니다.</p>
 
          <a href="https://jyj147.github.io/project4/"><button>main</button></a>   
-         <a href="https://jyj147.github.io/project4/detail/0"><button class="BTN">sub</button></a> 
+        
 
           </div>
 
@@ -222,7 +222,7 @@
         </div>
         <div class="main_box">
           <div class="photo">
-              <img src="img/사진.jpg" alt="">
+              <img src="img/me.jpg" alt="">
           </div>
           <div class="text">
               <h2>Jang Yu Jeong</h2>
