--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
             <p>슬라이더와 영상을 넣어 </p>
             <p>지루하지 않게 제작했습니다.</p>
 
-            <button>main</button> <button class="BTN">sub</button>
+            <a href="https://jyj147.github.io/project_2/"><button>main</button></a> 
+            <a href="https://jyj147.github.io/project_2/sub.html"><button class="BTN">sub</button></a>
 
           </div>
         </div>
@@ -167,7 +168,8 @@
             <p>J-query와 JAVA Script를 이용하여 동적 효과와</p>
             <p>편리함을 제공하였습니다.</p>
 
-            <button>main</button> <button class="BTN">sub</button>
+            <a href="https://jyj147.github.io/project_3/"><button>main</button></a>
+            <a href="https://jyj147.github.io/project_3/sub.html"><button class="BTN">sub</button></a> 
 
           </div>
         </div>
@@ -198,7 +200,8 @@
             <p>처음 만든 웹사이트이며, 연습 하기 위해</p>
             <p>레이아웃과 이미지를 비슷하게 따라했습니다.</p>
 
-            <button>main</button> <button class="BTN">sub</button>
+            <a href="https://jyj147.github.io/project_1/"><button>main</button></a> 
+            <a href="https://jyj147.github.io/project_1/sub.html"><button class="BTN">sub</button></a>
 
           </div>
         </div>
