--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1 class="NAME"><span class='one'>Jang Yu Jeong</span>
           <p class="PO">Portfolio</p>
         </h1>
-        <div class="HA"> HTML / CSS / JavaScript / J-QUERY / JSON / AJAX / REACT</div>
+        <div class="HA"> HTML / CSS / SCSS / JavaScript / J-QUERY / AJAX / REACT</div>
       </div>
 
       <!-- 01 PF-->
@@ -67,7 +67,7 @@
             <p>일리커피의 대표색인 빨간색과</p>
             <p>차분한 느낌을 줄 무채색을 사용하여</p>
             <p>더욱 멋있는 페이지를 제작하였습니다.</p> <br>
-            <p>react router, spa를 사용하여 </p>
+            <p>React Router, SPA를 사용하여 </p>
             <p>상세페이지, 장바구니, 로그인을 연결했습니다.</p>
 
          <a href="https://jyj147.github.io/project4/"><button>main</button></a>   
