--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <p>React Router, SPA를 사용하여 </p>
             <p>상세페이지, 장바구니, 로그인을 연결했습니다.</p>
 
-         <a href="https://jyj147.github.io/project4/"><button>main</button></a>   
+         <a href="https://jyj147.github.io/project4/" target="_blank"><button>main</button></a>   
         
 
           </div>
@@ -119,11 +119,11 @@
             <p>노란색을 사용하여 포인트를 주어 제작했습니다.</p><br>
             <p>제이쿼리를 사용하여</p>
             <p> 메뉴바에 반응형을 적용,</p> <br>
-            <p>슬라이더와 영상을 넣어 </p>
+            <p>슬라이더와 배너영상을 넣어 </p>
             <p>지루하지 않게 제작했습니다.</p>
 
-            <a href="https://jyj147.github.io/project_2/"><button>main</button></a> 
-            <a href="https://jyj147.github.io/project_2/sub.html"><button class="BTN">sub</button></a>
+            <a href="https://jyj147.github.io/project_2/" target="_blank"><button>main</button></a> 
+            <a href="https://jyj147.github.io/project_2/sub.html" target="_blank"><button class="BTN">sub</button></a>
 
           </div>
         </div>
@@ -168,8 +168,8 @@
             <p>J-query와 JAVA Script를 이용하여 동적 효과와</p>
             <p>편리함을 제공하였습니다.</p>
 
-            <a href="https://jyj147.github.io/project_3/"><button>main</button></a>
-            <a href="https://jyj147.github.io/project_3/sub.html"><button class="BTN">sub</button></a> 
+            <a href="https://jyj147.github.io/project_3/" target="_blank"><button>main</button></a>
+            <a href="https://jyj147.github.io/project_3/sub.html" target="_blank"><button class="BTN">sub</button></a> 
 
           </div>
         </div>
@@ -200,8 +200,8 @@
             <p>처음 만든 웹사이트이며, 연습 하기 위해</p>
             <p>레이아웃과 이미지를 비슷하게 따라했습니다.</p>
 
-            <a href="https://jyj147.github.io/project_1/"><button>main</button></a> 
-            <a href="https://jyj147.github.io/project_1/sub.html"><button class="BTN">sub</button></a>
+            <a href="https://jyj147.github.io/project_1/" target="_blank"><button>main</button></a> 
+            <a href="https://jyj147.github.io/project_1/sub.html" target="_blank"><button class="BTN">sub</button></a>
 
           </div>
         </div>
@@ -221,7 +221,7 @@
             <h2>ABOUT ME</h2>
           </div>
           <div class="sub_title">
-            <h3>A LEAD WEB PUBLISHER BASED IN KOREA</h3>
+            <h3>Web Design & Web Publishing</h3>
         </div>
         <div class="main_box">
           <div class="photo">
@@ -229,7 +229,7 @@
           </div>
           <div class="text">
               <h2>Jang Yu Jeong</h2>
-              <h4>A Lead Web Publisher based in Korea</h4>
+              <h4>Web Design & Web Publishing</h4>
               <p>모든 규모의 고객들을 위한 서비스를 디자인하고 개발합니다.<br>
                   멋지고 현대적인 웹사이트, 웹 서비스 그리고 <br> 온라인 상점을 만드는 것을 전문으로 하고 있습니다.<br> <br>
                   저의 목표는 지금보다 더 많은 기술을 습득하고 사용자의 정보를 파악하고 분석 연구하여<br>
@@ -245,7 +245,7 @@
                       <th>Education</th> <td>장안대학교 식품영양학과</td><th>Phone</th><td>010-3913-5192</td>
                   </tr>
                   <tr>
-                      <th>E-mail</th><td>jyj06789@gmail.com</td><th>CAREER</th><td>라인컴퓨터아트학원<br>(22. .  ~ 23. . )</td>
+                      <th>E-mail</th><td>jyj06789@gmail.com</td><th>CAREER</th><td>웹표준기반 스마트UIUX디자인&웹퍼블리셔<br>(22. 10. 31 ~ 23. 05. 09)</td>
                   </tr>
               </table>
           </div>
