--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
           <div class="text">
               <h2>Jang Yu Jeong</h2>
               <h4>Web Design & Web Publishing</h4>
-              <p>모든 규모의 고객들을 위한 서비스를 디자인하고 개발합니다.<br>
-                  멋지고 현대적인 웹사이트, 웹 서비스 그리고 <br> 온라인 상점을 만드는 것을 전문으로 하고 있습니다.<br> <br>
-                  저의 목표는 지금보다 더 많은 기술을 습득하고 사용자의 정보를 파악하고 분석 연구하여<br>
+              <p>웹 사이트를 디자인하고 웹 퍼블리싱이 가능합니다.<br>
+                  감각적인 디자인의 웹사이트, 웹 서비스 그리고 <br>반응형으로 모바일 버전을 만듭니다.<br> <br>
+                  저의 목표는 지금보다 더 많은 기술을 습득하고 사용자의 니즈를 파악하며<br>
                   다양한 사용자가 웹에 보다 쉽게 접근할수있도록 편의성 높은 웹 사이트를 설계하는 것입니다.</p>
               <table>
                   <tr>
