--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="ko" dir="ltr">
 
 <head>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6DBVV71RE9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6DBVV71RE9');
+</script>
+
   <meta charset="utf-8">
 
   <link rel="stylesheet" href="portfolio.css">
